# gangnam-4-13

BOSS-2(NeuRack)/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
BOSS-2(NeuRack)/backend/app/: main.py
BOSS-2(NeuRack)/backend/scripts/: backfill_embeddings.py  crawl_subsidies.py  ingest_contract_acceptable.py  ingest_contract_laws.py  ingest_contract_risks.py  ingest_legal_knowledge.py  ingest_tax_knowledge.py  verify_parallel_agents.py
dailycam(개발새발)/backend/: .dockerignore  Dockerfile  check_db_stats.py  gen_token.py  init_db.py  pyproject.toml  requirements.txt  run.py  start.bat  start_worker.bat
dailycam(개발새발)/backend/app/: __init__.py  init_db.py  main.py
marryday(marryday)/final-repo-back/: .cursorrules  .gitattributes  .gitignore  README.md  body_line_definitions.md  category_rules.json  main.py  marryday.prd  models_config.json  pyproject.toml  requirements.txt
marryday(marryday)/final-repo-back/config/: auth_middleware.py  cors.py  database.py  hf_segformer.py  prompts.py  server_session.py  settings.py
marryday(marryday)/final-repo-back/core/: gemini_client.py  llm_clients.py  model_loader.py  openai_image_client.py  s3_client.py  segformer_garment_parser.py  segformer_person_parser.py  supabase_client.py  xai_client.py
marryday(marryday)/final-repo-back/docs/: all_in_one.md
marryday(marryday)/final-repo-back/routers/: admin.py  auth.py  body_analysis.py  body_generation.py  composition.py  custom_v3_router.py  custom_v4_router.py  custom_v4v5_router.py  custom_v5_router.py  dress_management.py  fitting_router.py  image_processing.py  info.py  line_quiz_router.py  models.py  nukki_v2_router.py  prompt.py  prompt_test_router.py  proxy.py  review.py  segmentation.py  tryon_router.py  visitor_router.py  web.py
marryday(marryday)/final-repo-back/schemas/: common.py  fitting_schema.py  image_filter.py  review.py  segmentation.py  tryon_schema.py
marryday(marryday)/final-repo-back/services/: body_analysis_database.py  body_analysis_service.py  body_service.py  category_service.py  custom_v3_service.py  custom_v4_service.py  custom_v4v5_compare_service.py  custom_v5_service.py  database.py  dress_check_service.py  dress_fitting_log_service.py  dress_service.py  face_analysis_service.py  face_swap_service.py  fitting_service.py  garment_nukki_service.py  image_classifier_service.py  image_filter_service.py  image_service.py  log_service.py  nukki_v2_service.py  pose_landmark_service.py  (+6 more)
(+11140 files in other folders)
