[project]
name = "boss2-backend"
version = "4.0.0"
description = "BOSS-2 backend — FastAPI + Supabase + Celery + OpenAI + BAAI/bge-m3"
requires-python = ">=3.12"

# 의존성은 requirements.txt 로 관리. (uv pip install -r requirements.txt)
# pyproject.toml 은 버전/메타 고정용으로만 사용.

[tool.pytest.ini_options]
asyncio_mode = "auto"
